Mobile spacing fix

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -108,7 +108,11 @@ body {
   }
 
   @include respond-to(handhelds) {
-    padding: 180px 15px 40px;
+    padding: 180px 15px 0;
+
+    .madRows {
+      margin: 0 -15px;
+    }
 
     h1 {
       width: 45px;
